@@ -1,5 +1,3 @@
-Artistic
-COPYING
 Changes
 INSTALL
 LICENSE
