@@ -52,7 +52,7 @@ within the POD documentation, please send an email to barbie@cpan.org or
 submit a bug to the RT system (http://rt.cpan.org/). It would help greatly 
 if you are able to pinpoint problems or even supply a patch. 
 
-Fixes are dependant upon their severity and my availablity. Should a fix not
+Fixes are dependent upon their severity and my availability. Should a fix not
 be forthcoming, please feel free to (politely) remind me.
 
 DSLIP
@@ -78,6 +78,6 @@ COPYRIGHT AND LICENSE
 
   Copyright (C) 2004-2005 Barbie for Miss Barbell Productions
 
-  This module is free software; you can redistribute it and/or 
-  modify it under the same terms as Perl itself.
+  This module is free software; you can redistribute it and/or
+  modify it under the Artistic License 2.0.
 
