@@ -1,7 +1,9 @@
 # Changes log for Data::Phrasebook::Loader::Ini
 
 0.11	current
-	- removed 5.006 dependency.
+        - spelling fix. (thanks to Florian Schlichting & Gregor Herrmann).
+        - removed License files from distro.
+	- Artistic License v2 now sole license.
 
 0.10    01/03/2007
 	- Fixed META.yml typos.
